infra/istio/overlays/enrollment/destinationrule-enrollment.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: enrollment
  namespace: sis
spec:
  host: enrollment
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
