infra/istio/overlays/enrollment/authorizationpolicy-enrollment-allow-identity.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: enrollment-allow-identity
  namespace: sis
spec:
  selector:
    matchLabels:
      app: enrollment
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sis/sa/identity-sa"]
